--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tweet-card",
+  "name": "@kiran-bhalerao/react-tweet-card",
   "version": "0.2.1",
   "description": "A React component to display tweets",
   "main": "lib/index.js",
