--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "repository": {
     "url": "git@github.com:kiran-bhalerao/react-tweet-card.git"
   },
